# SSL

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  test.csv  test.ipynb  test.pickle  test.ts
.github/workflows/: ci.yaml
lightning7_ssl/: __init__.py  __main__.py  cfg.py  config.py  world.py
lightning7_ssl/SimpleVis/: WorldPlotter.py  __init__.py  generateLog.py  generate_log.py  test.py  worldData.py  world_plotter.py
lightning7_ssl/World/: common.py  maintainer.py  simple_filter.py  tmptest.py  world.py
lightning7_ssl/World/test/: test_common.py  test_maintainer.py  test_simple_filter.py
lightning7_ssl/control_client/: __init__.py  client.py  grSimPacket.py  packetHandler.py  strategyInfo.py
lightning7_ssl/control_client/protobuf/: __init__.py  command_pb2.py  command_pb2.pyi  debug_pb2.py  debug_pb2.pyi  gamestate_pb2.py  gamestate_pb2.pyi  grsim_commands_pb2.py  grsim_commands_pb2.pyi  grsim_packet_pb2.py  grsim_packet_pb2.pyi  grsim_replacement_pb2.py  grsim_replacement_pb2.pyi  logfile_pb2.py  logfile_pb2.pyi  messages_robocup_ssl_detection_tracked_pb2.py  messages_robocup_ssl_wrapper_tracked_pb2.py  pathfinding_pb2.py  pathfinding_pb2.pyi  robot_pb2.py  robot_pb2.pyi  ssl_detection_pb2.py  ssl_detection_pb2.pyi  ssl_game_controller_auto_ref_pb2.py  ssl_game_controller_auto_ref_pb2.pyi  ssl_game_controller_common_pb2.py  ssl_game_controller_common_pb2.pyi  ssl_game_controller_geometry_pb2.py  ssl_game_controller_geometry_pb2.pyi  ssl_game_controller_team_pb2.py  ssl_game_controller_team_pb2.pyi  ssl_game_event_2019_pb2.py  ssl_game_event_2019_pb2.pyi  ssl_game_event_pb2.py  ssl_game_event_pb2.pyi  ssl_gc_api_pb2.py  ssl_gc_api_pb2.pyi  ssl_gc_change_pb2.py  ssl_gc_change_pb2.pyi  ssl_gc_ci_pb2.py  (+43 more)
lightning7_ssl/control_client/protos/: compile.sh  grsim_commands.proto
lightning7_ssl/docs/source/: conf.py  control_client.rst  index.rst  lightning7_ssl.SimpleVis.rst  lightning7_ssl.control_client.rst  lightning7_ssl.player.rst  lightning7_ssl.player.test.rst  lightning7_ssl.roles.rst  lightning7_ssl.rst  lightning7_ssl.vecMath.rst  lightning7_ssl.vis.rst  lightning7_ssl.world.processing.rst  lightning7_ssl.world.rst  modules.rst  player.rst  roles.rst  vecMath.rst  vis.rst  world.rst  world.test.rst
lightning7_ssl/logs/: __init__.py  logger.py
lightning7_ssl/logtool/: Gamelog.py  data_splitter.py  log_player.py  ui.py
lightning7_ssl/logtool/test/: testGameLog.py  testLogPlayer.py
lightning7_ssl/player/: __init__.py  pathfinder.py  player.py  player_manager.py  playermanager.py
lightning7_ssl/player/test/: pathfinder.py  test_pathfinder.py  test_player.py  test_relative_speed.py
lightning7_ssl/playground/: pot_demo.py  potential_mock.py  potential_pathfinder.py  potential_pathfinder2.py  potential_world.py  potential_world2.py  potest.py
lightning7_ssl/playground2/: playground.py
lightning7_ssl/roles/: fixed_role.py  role.py
lightning7_ssl/state_machine/: __init__.py
lightning7_ssl/state_machine/test/: test_state_machine.py
lightning7_ssl/stratcore/: __init__.py  common.py  strategy.py
lightning7_ssl/utils/: config_loader.py  rpc.py  test_utils.py
lightning7_ssl/utils/test/: test_rpc.py
lightning7_ssl/vecMath/: __init__.py  vec_array.py  vec_math.py
lightning7_ssl/vis/: __init__.py  data_store.py  generate_log.py  tracker.py  vector_field.py  world_data.py  world_plotter.py
lightning7_ssl/vis/utils/: vector_field.py
lightning7_ssl/web/: server.py
lightning7_ssl/web/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
lightning7_ssl/world/: __init__.py  common.py  ctx.py  frame.py  geometry.py  maintainer.py  simple_filter.py  world.py
lightning7_ssl/world/estimators/: __init__.py  estimators.py  simple_filter.py
playground/: potential_world.py
simulator/: Dockerfile  README.md
(+14 files in other folders)
