[project]
name = "lightning7_ssl"
version = "0.1.0"
description = "SSL software for Delft Mercurians"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "protobuf~=4.23.1",
    "matplotlib~=3.7.1",
    "starlette~=0.27.0",
    "uvicorn~=0.22.0",
    "numpy~=1.24.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
    "sphinx~=7.0.1",
    "flake8~=6.0.0",
    "mypy~=1.3.0",
    "types-protobuf~=4.23.0.1",
    "mypy-protobuf~=3.4.0",
    "flake8-pyproject~=1.2.3",
    "isort~=5.12.0",
    "pre-commit~=3.3.2",
]

[tool.rye.scripts]
_mypy = "mypy -p lightning7_ssl --config-file pyproject.toml --follow-imports=silent --ignore-missing-imports"
_flake8 = "flake8 lightning7_ssl"
lint = { chain = ["_mypy", "_flake8"] }
_isort = "isort lightning7_ssl"
_black = "black lightning7_ssl"
format = { chain = ["_isort", "_black"] }

_isort_check = "isort --check lightning7_ssl"
_black_check = "black --check lightning7_ssl"
ci-check = ["_isort_check", "_black_check", "_mypy", "_flake8"]

[tool.mypy]
exclude = ["lightning7_ssl/docs/*"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 110
