[tool.poetry]
name = "lightning7-ssl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lightning7_ssl"}]

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^4.21.11"
protobuf-to-dict = {git = "https://github.com/wearefair/protobuf-to-dict.git", branch ="master" }
matplotlib = "^3.7.0"
starlette = "^0.25.0"
uvicorn = "^0.20.0"
numpy = "^1.24.2"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
sphinx = "^6.1.3"
flake8 = "^6.0.0"
mypy = "^1.1.1"
types-protobuf = "^4.22.0.0"
mypy-protobuf = "^3.4.0"
poethepoet = "^0.19.0"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"
pre-commit = "^3.2.0"
types-toml = "^0.10.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "lightning7_ssl/docs/*",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 110

[tool.poe.tasks]
_mypy = "mypy -p lightning7_ssl --config-file pyproject.toml --follow-imports=silent --ignore-missing-imports"
lint = [
    { ref = "_mypy" },
    { cmd = "flake8 lightning7_ssl" },
]
format  = [
    { cmd = "isort lightning7_ssl" },
    { cmd = "black lightning7_ssl" },
]
ci-check = [
    { cmd = "isort --check lightning7_ssl" },
    { cmd = "black --check lightning7_ssl" },
    { ref = "_mypy" },
    { cmd = "flake8 lightning7_ssl" },
]
